ugly z-index fix

--- a/src/components/Settings.module.css
+++ b/src/components/Settings.module.css
@@ -2,4 +2,5 @@
 	position: fixed;
 	top: 10%;
 	left: 2%;
+	z-index: 999999;
 }
